<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Crear_cta">

    <Button
        android:id="@+id/btn_entrar2"
        android:layout_width="203dp"
        android:layout_height="45dp"
        android:layout_marginStart="104dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="360dp"
        android:background="@drawable/btn_entrar"
        android:text="@string/Act_crear_cat_btn_regist"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ed_usuario2"
        android:layout_width="248dp"
        android:layout_height="47dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="166dp"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="31dp"
        android:ems="10"
        android:hint="@string/Act_crear_cat_txt_email"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/ed_password2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ed_password2"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="34dp"
        android:ems="10"
        android:hint="@string/Act_crear_cat_txt_passwor"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btn_entrar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_inicio_secion"
        android:layout_width="106dp"
        android:layout_height="30dp"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="145dp"
        android:layout_marginBottom="305dp"
        android:background="@drawable/btn_crear_cta"
        android:onClick="iniciarSecion"
        android:text="@string/Act_recupera_inicia_secion"
        android:textSize="9sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>