<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="204dp"
        android:layout_height="168dp"
        android:layout_marginStart="103dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="104dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/ed_usuario"
        android:layout_width="248dp"
        android:layout_height="47dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="97dp"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="22dp"
        android:ems="10"
        android:hint="@string/ACT_main_txt_usuario"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/ed_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/ed_password"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/ACT_main_txt_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btn_entrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_entrar"
        android:layout_width="203dp"
        android:layout_height="45dp"
        android:layout_marginStart="104dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/btn_entrar"
        android:onClick="entar"
        android:text="@string/ACT_main_btn_entar"
        app:layout_constraintBottom_toTopOf="@+id/btn_crear_cta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_crear_cta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="157dp"
        android:layout_marginEnd="158dp"
        android:background="@drawable/btn_crear_cta"
        android:onClick="crearCuenta"
        android:text="@string/ACT_main_btn_crearcta"
        android:textSize="9sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_olvido_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_olvido_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="138dp"
        android:layout_marginEnd="138dp"
        android:layout_marginBottom="81dp"
        android:background="@drawable/btn_crear_cta"
        android:onClick="olvidoPassword"
        android:text="@string/ACT_main_btn_olvidopassword"
        android:textSize="9sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>