<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecuperarPassword">

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="298dp"
        android:layout_height="46dp"
        android:layout_marginStart="74dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:hint="@string/Act_recupera_txt_emial"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="382dp"
        android:layout_height="29dp"
        android:layout_marginTop="111dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="20dp"
        android:text="@string/Act_recupera_lbl_titulo"
        app:layout_constraintBottom_toTopOf="@+id/edt_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="327dp"
        android:layout_height="33dp"
        android:layout_marginStart="58dp"
        android:layout_marginEnd="27dp"
        android:text="Le enviaremos un correo electronico a su email"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="173dp"
        android:layout_height="31dp"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="26dp"
        android:text="para recuperar su cuenta"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="105dp"
        android:layout_height="33dp"
        android:layout_marginStart="165dp"
        android:layout_marginEnd="141dp"
        android:layout_marginBottom="362dp"
        android:background="@drawable/btn_crear_cta"
        android:onClick="recuperarPassword"
        android:text="@string/Act_recupera_inicia_secion"
        android:textSize="9sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>