<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IngCodigo">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="204dp"
        android:layout_height="168dp"
        android:layout_marginStart="103dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="29dp"

        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="205dp"
        android:layout_height="37dp"
        android:layout_marginStart="102dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="14dp"
        android:text="@string/Act_ing_cod_txt_introduce"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="143dp"
        android:layout_height="37dp"
        android:layout_marginStart="135dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="22dp"
        android:text="@string/Act_ing_cod_txt_codigo"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="175dp"
        android:layout_height="49dp"
        android:layout_marginStart="115dp"
        android:layout_marginEnd="122dp"
        android:layout_marginBottom="58dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_restaurant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_restaurant"
        android:layout_width="193dp"
        android:layout_height="45dp"
        android:layout_marginStart="112dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="187dp"
        android:background="@drawable/btn_entrar"
        android:text="@string/Act_ing_cod_btn_irRest"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>